syntax = "proto3";
package models;
option go_package = "./models";

import "github.com/infobloxopen/protoc-gen-gorm/options/gorm.proto";

message LogCountByPublicKey {
  option (gorm.opts) = {ormable: true};

  string public_key = 1 [(gorm.field).tag = {primary_key: true}];
  string transaction_hash = 2;
  uint64 log_index = 3;
  uint64 count = 4 [(gorm.field).tag = {index: "log_count_by_address_idx_count"}];
}
